Move views/Objects mode handling into react-router

--- a/site.less
+++ b/site.less
@@ -197,11 +197,9 @@ header {
   color: white;
 }
 .hlinks {
-  span {
+  a {
     margin: 2px;
     padding: 2px;
-    text-decoration: underline;
-    cursor: pointer;
   }
 }
 
