Add style for Buffer type

--- a/site.less
+++ b/site.less
@@ -187,6 +187,18 @@ header {
     color: darkred;
   }
 }
+.buffer {
+  font-family: monospace;
+  font-size: 90%;
+  word-break: break-all;
+  span {
+    padding: 0 2px 0 1px;
+    border-right: 1px solid #888;
+    &:last-child {
+      border-right: none;
+    }
+  }
+}
 
 .layout {
   margin: 10px;
