Restyle header > nav with flexbox

--- a/site.less
+++ b/site.less
@@ -139,14 +139,16 @@ header {
 
     left: 0;
     right: 0;
-    padding: 2px;
+    padding: 2px 5px;
 
     background: linear-gradient(to bottom, #EEE, #CCC);
     border-bottom: 1px solid #AAA;
 
     font-size: 80%;
+
+    display: flex;
+    align-items: center;
     & > section {
-      display: inline-block;
       & > span {
         margin: 0 20px 0 2px;
       }
