--- a/site.less
+++ b/site.less
@@ -149,6 +149,9 @@ header {
     display: flex;
     align-items: center;
     & > section {
+      &.last {
+        flex-grow: 1;
+      }
       & > span {
         margin: 0 20px 0 2px;
       }
